--- a/order.yml
+++ b/order.yml
@@ -1,34 +1,23 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
-    register-with-eureka: true
-    fetch-registry: true
-  # 注册中心点击后的名字
-  instance:
-    hostname: order
+# server:
+#   port: 9090
 
-server:
-  port: 9090
+# spring:
+#   application:
+#     name: order
+#   datasource:
+#     product:
+#       url: jdbc:mysql://192.168.7.108/product?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+#       username: test
+#       password: test
+#       driver-class-name: com.mysql.cj.jdbc.Driver
+#       type: com.alibaba.druid.pool.DruidDataSource
 
-
-spring:
-  application:
-    name: order
-  datasource:
-    product:
-      url: jdbc:mysql://192.168.7.108/product?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
-      username: test
-      password: test
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      type: com.alibaba.druid.pool.DruidDataSource
-
-logging:
-  config: classpath:log4j2.xml
+# logging:
+#   config: classpath:log4j2.xml
 
 
-# 负载均衡
-product:
-  ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+# # 负载均衡
+# product:
+#   ribbon:
+#     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 
